Fix reminder notification and add unit test for prayer time